# deep-coder

./: .gitignore  .pre-commit-config.yaml  CODER.md  Makefile  README.md  deep_coder.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
deep_coder/: __init__.py  __main__.py  cli.py  client.py  config.py  context.py  display.py  memory.py  models.py  server.py
deep_coder/agent/: orchestrator.py  task.py  worker.py
deep_coder/prompts/: orchestrator.txt  system.py  worker.txt
deep_coder/skills/: __init__.py  base.py  commit.py  explain.py  fix.py  memory.py  pr.py  review.py  test_skill.py  think.py
deep_coder/tools/: base.py  file_ops.py  git.py  search.py  shell.py  web.py
plugins/vscode/: .vscodeignore  README.md  deep-coder-0.1.0.vsix  package-lock.json  package.json  tsconfig.json  webpack.config.js
plugins/vscode/media/: chat.css  chat.js
plugins/vscode/src/: chatPanel.ts  client.ts  extension.ts  statusBar.ts
scripts/: generate_badge.py  publish.sh  release.sh
tests/: test_client.py  test_client_extended.py  test_config.py  test_config_extended.py  test_context.py  test_context_extended.py  test_display.py  test_display_extended.py  test_file_ops_extended.py  test_git_extended.py  test_memory.py  test_memory_skill.py  test_models.py  test_orchestrator.py  test_orchestrator_extended.py  test_orchestrator_process.py  test_prompts.py  test_search_extended.py  test_server.py  test_server_extended.py  test_skill_execute.py  test_skills.py  test_skills_extended.py  test_stream_to_console.py  test_task_extended.py  test_tools.py  test_tools_extended.py  test_web.py  test_web_execute.py  test_worker.py
