[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-coder"
version = "0.1.0"
description = "The most cost-effective code assistant tool based on DeepSeek V4"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.10"
authors = [
    {name = "xsank"},
]
keywords = ["deepseek", "code-assistant", "cli", "ai", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai>=1.30.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "pre-commit>=4.0.0",
]
build = [
    "pyinstaller==6.20.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
deep-coder = "deep_coder.cli:main"

[project.urls]
Homepage = "https://github.com/xsank/deep-coder"
Repository = "https://github.com/xsank/deep-coder"

[tool.setuptools.packages.find]
include = ["deep_coder*"]

[tool.setuptools.package-data]
"deep_coder.prompts" = ["*.txt"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
